# oceantool

./: CMakeLists.txt  LICENSE  README  TODO
code/: common.cpp  common.h  dft.cpp  dft.h  math.cpp  math.h  oceantool.cpp  opengl.cpp  opengl.h
shaders/: image.vert  image_height_map.frag  image_normal_map.frag  imgui.frag  imgui.vert  mesh.frag  mesh.vert
